Allow to configure model capabilities
